      latest version).
   bufr_dupsst, bufr_geofil:
    - Placed into VS/EE for first time.  Source changed to now generate
      diagnostic print if an embedded BUFR table is read.  Makefile points to
      generic bufrlib (always the latest version).
   bufr_edtbfr:
    - Placed into VS/EE for first time.  Source changed to add URMA as new
      option for network (comment only).  Makefile points to generic bufrlib
      (always the latest version).
   wave_dcodquikscat:
    - Placed into VS/EE for first time.  Source changed to now print only the
      first 100 reports with an unrecognized satellite ID (to reduce size of
      stdout in such cases).  Makefile points to generic bufrlib (always the
      latest version).

 USH script changes:
   bufr_dump_obs.sh:
    - Placed into VS/EE for first time. 
    - Changes to handle files now under Vertical Directory Structure:
       - Imports new environment variable $HOMEobsproc_dump which points to
         directory path for generic dump subdirectories under version control
         (in production this is normally /nwprod/obsproc_dump.vX.Y.Z where
         X.Y.Z version number being used, usually the latest).
       - Imports new environment variable $HOMEobsproc_network which points to
         directory path for network-specific dump subdirectories under version
         control (in production this is normally /nwprod/obsproc_NETWORK.vX.Y.Z
         where NETWORK is, e.g., global, nam, rap, rtma, urma, and x.y.z is
         version number being used, usually the latest)
       These replace /nw${envir} in order to point to files moved from
       horizontal to vertical directory structure.
   dumpjb:
    - Placed into VS/EE for first time. As a result, DUEX (path to dump
      executables) no longer defaults to /nwprod/exec but rather to
      $HOMEobsproc_dump/exec, and one of the three variables
      "obsproc_dump_ver", "HOMEobsproc_dump" or "DUEX" must be defined coming